=========
 Changes
=========

Here you can see the list of changes between each git-pr release.


0.2.0 (unreleased)
==================

- Drop Python 3.2 support simply because it's dead (reached end of life).


0.1.0 (2015-10-17)
==================

- First public release.