@@ -36,6 +36,12 @@ A pull request ID to be fetched.
 If passed, a pull request will be fetched into a new branch with a given
 \fIname\fR.
 
+.TP
+.B \-m, \-\-merge
+If passed, a merge commit of a pull request and a branch it's submitted to
+will be fetched. Please note, it's possible to fetch merge commits of open
+pull requests only.
+
 
 .SH BUGS
 Bug reports can be submitted to <https://github.com/ikalnytskyi/git\-pr/issues>
