@@ -19,13 +19,13 @@ from git_pr.core import PullRequest
 class TestPullRequest(unittest.TestCase):
 
     def setUp(self):
-        self.pr = PullRequest('test-repo')
+        self.pr = PullRequest('repo')
 
     def test_get(self, sp_call):
         self.pr.get(42)
 
         self.assertEqual([
-            mock.call(['git', 'fetch', 'test-repo', 'pull/42/head']),
+            mock.call(['git', 'fetch', 'repo', 'refs/pull/42/head']),
             mock.call(['git', 'checkout', 'FETCH_HEAD']),
         ], sp_call.call_args_list)
 
@@ -33,6 +33,22 @@ class TestPullRequest(unittest.TestCase):
         self.pr.get(42, 'pr/42')
 
         self.assertEqual([
-            mock.call(['git', 'fetch', 'test-repo', 'pull/42/head:pr/42']),
+            mock.call(['git', 'fetch', 'repo', 'refs/pull/42/head:pr/42']),
+            mock.call(['git', 'checkout', 'pr/42']),
+        ], sp_call.call_args_list)
+
+    def test_get_merge_commit(self, sp_call):
+        self.pr.get(42, merge=True)
+
+        self.assertEqual([
+            mock.call(['git', 'fetch', 'repo', 'refs/pull/42/merge']),
+            mock.call(['git', 'checkout', 'FETCH_HEAD']),
+        ], sp_call.call_args_list)
+
+    def test_get_create_branch_and_merge_commit(self, sp_call):
+        self.pr.get(42, 'pr/42', merge=True)
+
+        self.assertEqual([
+            mock.call(['git', 'fetch', 'repo', 'refs/pull/42/merge:pr/42']),
             mock.call(['git', 'checkout', 'pr/42']),
         ], sp_call.call_args_list)
